# velirion-spl

./: .eslintrc.js  Anchor.toml  README.md  package.json
programs/my-project/: Cargo.toml
programs/my-project/src/: lib.rs
programs/velirion-spl/: Cargo.toml
programs/velirion-spl/src/: lib.rs
scripts/: deploy.ts  test-deployment.ts
tests/: error-cases.ts  integration.ts  my-project.ts  velirion-spl.ts
