[package]
name = "velirion-spl"
version = "0.1.0"
description = "SPL Token smart contract with supply, burning, and ownership controls"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velirion_spl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token = "3.5.0"
